--- a/index.html
+++ b/index.html
@@ -10,21 +10,31 @@
         Need: header, nav, photo/info sec., projects, contact, footer
     -->
     <body>
-        <header>
+        <header class="aside">
+            <img>
+            <h1>Martha Adame</h1>
+            <p>Portfolio - insert description or quote</p>
 
+              <nav>
+                <ul>
+                    <li><a href="header">About Me</a></li>
+                    <li><a href="projects">My Work</a></li>
+                    <li><a href="conact-me">Contact Me</a></li>
+                </ul>
+             </nav>
         </header>
-
-        <nav>
-
-        </nav>
-
-        <main>
+      
+        <main class="projects">
 
         </main>
 
-        <section>
-            
+        <section class="contact-me">
+
         </section>
 
     </body>
+
+    <footer>
+
+    </footer>
 </html>
