Added projects and contact me basics

--- a/index.html
+++ b/index.html
@@ -23,13 +23,50 @@
                 </ul>
              </nav>
         </header>
+
+        <section class="intro">
+            <h2>intro area</h2>
+        </section>
       
         <main class="projects">
+            <section class="horiseon">
+                <h2>Horiseon Refactor</h2>
+            </section>
 
+            <section class="projects-2+">
+                <h2>Project 2</h2>
+            </section>
+
+            <section class="projects-2+">
+                <h2>Project 3</h2>
+            </section>
+
+            <section class="projects-2+">
+                <h2>Project 4</h2>
+            </section>
+
+            <section class="projects-2+">
+                <h2>Project 5</h2>
+            </section>
         </main>
 
         <section class="contact-me">
+            <form action="action_page.php">
 
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstname">
+
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastname">
+
+                <label for="email">Your Email</label>
+                <input type="text" id="email" name="email">
+
+                <label for="subject">subject</label>
+                <input type="text" id="subject" name="subject">
+
+                <input type="submit" value="Submit">
+            </form>
         </section>
 
     </body>
