CSS root, header, universal, h1

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <header class="aside">
             <img>
             <h1>Martha Adame</h1>
-            <p>Portfolio - insert description or quote</p>
+             <p id="h1-p">Portfolio - insert description or quote</p>
 
               <nav>
                 <ul>
-                    <li><a href="header">About Me</a></li>
+                    <li><a href="intro">About Me</a></li>
                     <li><a href="projects">My Work</a></li>
                     <li><a href="conact-me">Contact Me</a></li>
                 </ul>
@@ -25,7 +25,7 @@
         </header>
 
         <section class="intro">
-            <h2>intro area</h2>
+            <h2>About Me</h2>
         </section>
       
         <main class="projects">
