CSS for header, about me, projects start

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                 <h2>Horiseon Refactor</h2>
             </section>
 
-            <section class="projects-2+">
+            <section class="projects-2">
                 <h2>Project 2</h2>
             </section>
 
-            <section class="projects-2+">
+            <section class="projects-2">
                 <h2>Project 3</h2>
             </section>
 
-            <section class="projects-2+">
+            <section class="projects-2">
                 <h2>Project 4</h2>
             </section>
 
-            <section class="projects-2+">
+            <section class="projects-2">
                 <h2>Project 5</h2>
             </section>
         </main>
