Form html revision, css nav revision

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             </section>
         </main>
 
+        <!-- ADD PHP ACTION PAGE FOR EMAIL-->
         <section class="contact-me">
             <form action="action_page.php">
 
@@ -59,11 +60,11 @@
                 <label for="lname">Last Name</label>
                 <input type="text" id="lname" name="lastname">
 
-                <label for="email">Your Email</label>
+                <label for="email">Email Address</label>
                 <input type="text" id="email" name="email">
 
-                <label for="subject">subject</label>
-                <input type="text" id="subject" name="subject">
+                <label for="message">Message (optional)</label>
+                <input type="text" id="message" name="message">
 
                 <input type="submit" value="Submit">
             </form>
