--- a/index.html
+++ b/index.html
@@ -28,25 +28,28 @@
             <h2>About Me</h2>
         </section>
       
-        <main class="projects">
+        <main class="container">
             <section class="horiseon">
                 <h2>Horiseon Refactor</h2>
             </section>
 
-            <section class="projects-2">
-                <h2>Project 2</h2>
-            </section>
+            <!--ADD NEW PROJECTS HERE-->
+            <section class="projects">
+                <section>
+                    <h2>Project 2</h2>
+                </section>
 
-            <section class="projects-2">
-                <h2>Project 3</h2>
-            </section>
+                <section>
+                    <h2>Project 3</h2>
+                </section>
 
-            <section class="projects-2">
-                <h2>Project 4</h2>
-            </section>
+                <section>
+                    <h2>Project 4</h2>
+                </section>
 
-            <section class="projects-2">
-                <h2>Project 5</h2>
+                <section>
+                    <h2>Project 5</h2>
+                </section>
             </section>
         </main>
 
