css grid for projects, css background img for projects

--- a/index.html
+++ b/index.html
@@ -33,21 +33,24 @@
                 <h2>Horiseon Refactor</h2>
             </section>
 
-            <!--ADD NEW PROJECTS HERE-->
+            <!--
+            ADD NEW PROJECTS HERE
+            future project sections must have class="hero"
+            -->
             <section class="projects">
-                <section>
+                <section class="hero">
                     <h2>Project 2</h2>
                 </section>
 
-                <section>
+                <section class="hero">
                     <h2>Project 3</h2>
                 </section>
 
-                <section>
+                <section class="hero">
                     <h2>Project 4</h2>
                 </section>
 
-                <section>
+                <section class="hero">
                     <h2>Project 5</h2>
                 </section>
             </section>
