Added background images to projects and about me

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="aside">
             <img>
             <h1>Martha Adame</h1>
-             <p id="h1-p">Portfolio - insert description or quote</p>
+             <p id="h1-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime autem incidunt magni, ullam veniam optio est tempore mollitia et exercitationem omnis placeat, quisquam sequi iste totam. Amet sit ea magni?</p>
 
               <nav>
                 <ul>
