--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
         <header class="aside">
             <img>
             <h1>Martha Adame</h1>
-             <p id="h1-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime autem incidunt magni, ullam veniam optio est tempore mollitia et exercitationem omnis placeat, quisquam sequi iste totam. Amet sit ea magni?</p>
+             <p id="h1-p">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Maxime autem incidunt magni, ullam veniam optio est tempore mollitia 
+                 et exercitationem omnis placeat, quisquam sequi iste totam. Amet 
+                 sit ea magni?</p>
 
               <nav>
                 <ul>
                     <li><a href="intro">About Me</a></li>
-                    <li><a href="projects">My Work</a></li>
+                    <li><a href="container">My Work</a></li>
                     <li><a href="conact-me">Contact Me</a></li>
                 </ul>
              </nav>
