nav overhaul, container grid revision

--- a/index.html
+++ b/index.html
@@ -11,23 +11,21 @@
         Need: header, nav, photo/info sec., projects, contact, footer
     -->
     <body>
+
+        <!-- </header> -->
         <header class="aside">
             <img>
-            <h1>Martha Adame</h1>
+            <h1 class="myName">Martha Adame</h1>
 
-        <nav>
-                    <ul>
-                        <li><a href="intro">About Me</a></li>
-                        <li><a href="container">My Work</a></li>
-                        <li><a href="conact-me">Contact Me</a></li>
-                    </ul>
-        </nav> 
+            <nav class="navLinks">
+                        <ul>
+                            <li><a href="intro">About Me</a></li>
+                            <li><a href="container">My Work</a></li>
+                            <li><a href="conact-me">Contact Me</a></li>
+                        </ul>
+            </nav> 
 
         </header>
-
-       
-
-       
         <main class="container">
 
             <section class="intro">
