new color:intro&header; new img in intro

--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
         <main class="container">
 
             <section class="intro">
-                        <h2>About Me</h2>
+                <img class="imgMar" src="./images/IMG_7656.jpg" alt="Image of: Martha Adame">
+                <h2 class="aboutMe">About Me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quae vitae, distinctio, ipsam error explicabo doloribus, similique 
+                    molestiae nostrum doloremque dolore dolorum. Veritatis voluptates 
+                    optio quae nostrum excepturi, aperiam quasi quisquam.</p>
             </section>
 
             <section class="horiseon">
@@ -59,8 +64,16 @@
             </section>
         </main>
 
-        <!-- ADD PHP ACTION PAGE FOR EMAIL-->
         <section class="contact-me">
+            <ul>
+                <li><a href="https://www.instagram.com/">Instagram</a></li>
+                <li><a href="https://www.facebook.com/facebook/">Facebook</a></li>
+                <li><a href="https://www.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">Linkedin</a></li>
+            </ul>
+        </section>
+
+        <!-- ADD PHP ACTION PAGE FOR EMAIL-->
+        <!-- <section class="contact-me">
             <form action="action_page.php">
 
                 <label for="fname">First Name</label>
@@ -77,7 +90,7 @@
 
                 <input type="submit" value="Submit">
             </form>
-        </section>
+        </section> -->
 
     </body>
 
