added contact me css, used existing nav css

--- a/index.html
+++ b/index.html
@@ -47,28 +47,28 @@
             -->
             <section class="projects">
                 <section class="hero">
-                    <h2>Project 2</h2>
+                    <h2>Future Project</h2>
                 </section>
 
                 <section class="hero">
-                    <h2>Project 3</h2>
+                    <h2>Future Project</h2>
                 </section>
 
                 <section class="hero">
-                    <h2>Project 4</h2>
+                    <h2>Future Project</h2>
                 </section>
 
                 <section class="hero">
-                    <h2>Project 5</h2>
+                    <h2>Future Project</h2>
                 </section>
             </section>
         </main>
 
-        <section class="contact-me">
-            <ul>
-                <li><a href="https://www.instagram.com/">Instagram</a></li>
-                <li><a href="https://www.facebook.com/facebook/">Facebook</a></li>
-                <li><a href="https://www.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">Linkedin</a></li>
+        <section class="contactContainer">
+            <ul class="contactMe">
+                <li><a class="contact-link" href="https://www.instagram.com/">Instagram</a></li>
+                <li><a class="contact-link" href="https://www.facebook.com/facebook/">Facebook</a></li>
+                <li><a class="contact-link" href="https://www.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">Linkedin</a></li>
             </ul>
         </section>
 
