--- a/index.html
+++ b/index.html
@@ -65,32 +65,13 @@
         </main>
 
         <section class="contactContainer">
+            <h2 class="contacttitle">Contact Me</h2>
             <ul class="contactMe">
                 <li><a class="contact-link" href="https://www.instagram.com/">Instagram</a></li>
                 <li><a class="contact-link" href="https://www.facebook.com/facebook/">Facebook</a></li>
                 <li><a class="contact-link" href="https://www.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">Linkedin</a></li>
             </ul>
         </section>
-
-        <!-- ADD PHP ACTION PAGE FOR EMAIL-->
-        <!-- <section class="contact-me">
-            <form action="action_page.php">
-
-                <label for="fname">First Name</label>
-                <input type="text" id="fname" name="firstname">
-
-                <label for="lname">Last Name</label>
-                <input type="text" id="lname" name="lastname">
-
-                <label for="email">Email Address</label>
-                <input type="text" id="email" name="email">
-
-                <label for="message">Message (optional)</label>
-                <input type="text" id="message" name="message">
-
-                <input type="submit" value="Submit">
-            </form>
-        </section> -->
 
     </body>
 
