horiseon css, horiseon html-new photo, added footer css and html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
             <section class="horiseon">
                 <h2>Horiseon Refactor</h2>
+                <a href="link to horiseon"><img class="horimg" src="./images/horiseon-screenshot (2).PNG" alt="Horiseon landing page"</a>
             </section>
 
             <!--
@@ -76,6 +77,6 @@
     </body>
 
     <footer>
-
+        <h2>Made with ❤️ and CSS</h2>
     </footer>
 </html>
