--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
             <section class="intro">
                 <img class="imgMar" src="./images/IMG_7656.jpg" alt="Image of: Martha Adame">
                 <h2 class="aboutMe">About Me</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                <p class="myinfo">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Quae vitae, distinctio, ipsam error explicabo doloribus, similique 
                     molestiae nostrum doloremque dolore dolorum. Veritatis voluptates 
                     optio quae nostrum excepturi, aperiam quasi quisquam.</p>
+                    
             </section>
 
+            <h2>Work Gallery</h2>
+
             <section class="horiseon">
-                <h2>Horiseon Refactor</h2>
-                <a href="link to horiseon"><img class="horimg" src="./images/horiseon-screenshot (2).PNG" alt="Horiseon landing page"</a>
+                <h3>Horiseon Refactor</h3>
+                <a href="https://mladame.github.io/horiseon-refactor/"><img class="horieimg" src="./images/horiseon-screenshot (2).PNG" alt="Horiseon landing page"></a>
             </section>
 
             <!--
@@ -48,19 +51,19 @@
             -->
             <section class="projects">
                 <section class="hero">
-                    <h2>Future Project</h2>
+                    <h3>Future Project</h3>
                 </section>
 
                 <section class="hero">
-                    <h2>Future Project</h2>
+                    <h3>Future Project</h3>
                 </section>
 
                 <section class="hero">
-                    <h2>Future Project</h2>
+                    <h3>Future Project</h3>
                 </section>
 
                 <section class="hero">
-                    <h2>Future Project</h2>
+                    <h3>Future Project</h3>
                 </section>
             </section>
         </main>
