intro css fix, hover text my info, add email link

--- a/index.html
+++ b/index.html
@@ -29,16 +29,23 @@
         <main class="container">
 
             <section class="intro">
-                <img class="imgMar" src="./images/IMG_7656.jpg" alt="Image of: Martha Adame">
                 <h2 class="aboutMe">About Me</h2>
-                <p class="myinfo">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Quae vitae, distinctio, ipsam error explicabo doloribus, similique 
-                    molestiae nostrum doloremque dolore dolorum. Veritatis voluptates 
-                    optio quae nostrum excepturi, aperiam quasi quisquam.</p>
-                    
+                <div class="imgcontainer">
+                    <img class="imgMar" src="./images/IMG_mar.jpg" alt="Image of: Martha Adame">
+                    <span class="myinfo">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        A dicta, quod voluptates vitae culpa alias dignissimos 
+                        voluptate incidunt fugit nisi.
+                    </span>
+                </div>
+                <!-- <p class="myinfo">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Quae vitae, distinctio, ipsam error explicabo doloribus, similique 
+                molestiae nostrum doloremque dolore dolorum. Veritatis voluptates 
+                optio quae nostrum excepturi, aperiam quasi quisquam.</p> -->
+            
             </section>
 
-            <h2>Work Gallery</h2>
+            <h2 class="work">Work Gallery</h2>
 
             <section class="horiseon">
                 <h3>Horiseon Refactor</h3>
@@ -74,6 +81,7 @@
                 <li><a class="contact-link" href="https://www.instagram.com/">Instagram</a></li>
                 <li><a class="contact-link" href="https://www.facebook.com/facebook/">Facebook</a></li>
                 <li><a class="contact-link" href="https://www.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">Linkedin</a></li>
+                <li><a class="contact-link" href="mailto: mladame43@gmail.com">Email</a></li>
             </ul>
         </section>
 
