finished media query, fixed html links, README.md

--- a/index.html
+++ b/index.html
@@ -13,34 +13,34 @@
     <body>
 
         <!-- </header> -->
-        <header class="aside">
+        <header>
 
             <h1 class="myName">Martha Adame</h1>
 
             <nav class="navLinks">
                         <ul>
-                            <li><a href="intro">About Me</a></li>
-                            <li><a href="container">My Work</a></li>
-                            <li><a href="conact-me">Contact Me</a></li>
+                            <li><a href="#intro">About Me</a></li>
+                            <li><a href="#work">My Work</a></li>
+                            <li><a href="#contactMe">Contact Me</a></li>
                         </ul>
             </nav> 
 
         </header>
         <main class="container">
 
-            <section class="intro">
+            <section class="intro" id="intro">
                 <h2 class="aboutMe">About Me</h2>
                 <div class="imgcontainer">
                     <img class="imgMar" src="./images/IMG_mar.jpg" alt="Image of: Martha Adame">
                     <span class="myinfo">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        A dicta, quod voluptates vitae culpa alias dignissimos 
-                        voluptate incidunt fugit nisi.
+                        My name is Martha. Learning new ways to bring ideas to 
+                        life is a never ending adventure. As a coder in training,
+                        I am always looking forward to a challenge. 
                     </span>
                 </div>
             </section>
 
-            <h2 class="work">Work Gallery</h2>
+            <h2 class="work" id="work">Work Gallery</h2>
 
             <section class="horiseon">
                 <h3>Horiseon Refactor</h3>
@@ -72,7 +72,7 @@
 
         <section class="contactContainer">
             <h2 class="contacttitle">Contact Me</h2>
-            <ul class="contactMe">
+            <ul class="contactMe" id="contactMe">
                 <li><a class="contact-link" href="https://www.instagram.com/">Instagram</a></li>
                 <li><a class="contact-link" href="https://www.facebook.com/facebook/">Facebook</a></li>
                 <li><a class="contact-link" href="https://www.linkedin.com/?trk=guest_homepage-basic_nav-header-logo">Linkedin</a></li>
